--- a/package.json
+++ b/package.json
@@ -6,18 +6,18 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/dom-webcodecs": "^0.1.7",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.46",
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
-    "@types/dom-webcodecs": "^0.1.7",
+    "@webgpu/types": "^0.1.32",
+    "gl-matrix": "^3.4.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^2.1.3",
     "typescript": "^5.1.0-dev.20230508",
-    "web-vitals": "^2.1.4",
-    "@webgpu/types": "^0.1.32",
-    "gl-matrix": "^3.4.3"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
